--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,106 +5,51 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.example.user.labcostaccounting.MainActivity">
+        tools:context="com.example.user.labcostaccounting.AddNewActivity">
 
-    <LinearLayout
-            android:layout_width="368dp"
-            android:layout_height="0dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp"
-            android:gravity="bottom"
-            android:orientation="vertical"
-            android:weightSum="1"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0"
-            android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="parent">
-
-        <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/colorPrimary"
-                android:orientation="horizontal">
-
-            <TextView
-                    android:id="@+id/checkboxColumn"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.1"
-                    android:gravity="center"
-                    android:padding="8dp"
-                    android:textColor="#ffffff"/>
-
-            <TextView
-                    android:id="@+id/nameColumn"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.4"
-                    android:gravity="center"
-                    android:padding="8dp"
-                    android:text="name"
-                    android:textAlignment="center"
-                    android:textColor="#ffffff"/>
-
-            <TextView
-                    android:id="@+id/statusColumn"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.3"
-                    android:gravity="center"
-                    android:padding="8dp"
-                    android:text="status"
-                    android:textColor="#ffffff"/>
-
-            <TextView
-                    android:id="@+id/amountColumn"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.2"
-                    android:gravity="center"
-                    android:padding="8dp"
-                    android:text="amount"
-                    android:textColor="#ffffff"/>
-
-        </LinearLayout>
+    <LinearLayout android:orientation="vertical" android:layout_width="368dp"
+                  android:layout_height="495dp"
+                  tools:context=".AddNewActivity" tools:layout_editor_absoluteY="8dp"
+                  app:layout_constraintVertical_bias="0.3"
+                  app:layout_constraintBottom_toBottomOf="parent"
+                  app:layout_constraintLeft_toLeftOf="parent"
+                  app:layout_constraintRight_toRightOf="parent"
+                  app:layout_constraintTop_toTopOf="parent"
+                  app:layout_constraintHorizontal_bias="0.4"
+                  tools:layout_constraintRight_creator="1" tools:layout_constraintLeft_creator="1"
+                  tools:layout_editor_absoluteX="8dp">
 
         <ListView
-                android:id="@+id/dataTable"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1.03" />
+                android:layout_height="398dp"
+                android:longClickable="true"
 
-        <LinearLayout
+                app:layout_constraintVertical_bias="0.0"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintHorizontal_bias="0.4"
+                tools:layout_constraintRight_creator="1" tools:layout_constraintLeft_creator="1"
+                android:id="@+id/table"
+        />
+
+
+
+        <Button
+                android:id="@+id/add"
+                android:text="Add"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:onClick="addClick"/>
+        <Button
+                android:id="@+id/delete"
+                android:text="Delete"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:onClick="deleteclick"/>
 
-            <Button
-                    android:id="@+id/addButton"
-                    android:layout_width="123dp"
-                    android:layout_height="wrap_content"
-                    android:onClick="onOpenAddNewLayout"
-                    android:text="Add" />
 
-            <Button
-                    android:id="@+id/deleteButton"
-                    android:layout_width="102dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.17"
-                    android:onClick="onDeleteSelectedItems"
-                    android:text="Delete" />
-
-            <Button
-                    android:id="@+id/totalButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.30"
-                    android:onClick="onOpeningTotal"
-                    android:text="Total" />
-        </LinearLayout>
 
     </LinearLayout>
 
