--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,49 +5,45 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.example.user.labcostaccounting.AddNewActivity">
+        tools:context="com.example.user.labcostaccounting.MainActivity">
 
-    <LinearLayout android:orientation="vertical" android:layout_width="368dp"
+    <LinearLayout android:orientation="vertical"
+                  android:layout_width="368dp"
                   android:layout_height="495dp"
-                  tools:context=".AddNewActivity" tools:layout_editor_absoluteY="8dp"
+                  tools:layout_editor_absoluteY="8dp"
                   app:layout_constraintVertical_bias="0.3"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintLeft_toLeftOf="parent"
                   app:layout_constraintRight_toRightOf="parent"
                   app:layout_constraintTop_toTopOf="parent"
                   app:layout_constraintHorizontal_bias="0.4"
-                  tools:layout_constraintRight_creator="1" tools:layout_constraintLeft_creator="1"
-                  tools:layout_editor_absoluteX="8dp">
+                  tools:layout_constraintRight_creator="1" tools:layout_constraintLeft_creator="1">
 
         <ListView
+                android:id="@+id/table"
                 android:layout_width="match_parent"
                 android:layout_height="398dp"
                 android:longClickable="true"
 
-                app:layout_constraintVertical_bias="0.0"
+                app:layout_constraintVertical_bias="0.1"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintHorizontal_bias="0.4"
-                tools:layout_constraintRight_creator="1" tools:layout_constraintLeft_creator="1"
-                android:id="@+id/table"
-        />
-
-
+                tools:layout_constraintRight_creator="1" tools:layout_constraintLeft_creator="1"/>
 
         <Button
-                android:id="@+id/add"
+                android:id="@+id/addButton"
                 android:text="Add"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:onClick="addClick"/>
+                android:layout_height="wrap_content"/>
+
         <Button
-                android:id="@+id/delete"
+                android:id="@+id/delButton"
                 android:text="Delete"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:onClick="deleteclick"/>
+                android:layout_height="wrap_content"/>
 
 
 
