--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,16 +22,7 @@
         <ListView
                 android:id="@+id/table"
                 android:layout_width="match_parent"
-                android:layout_height="398dp"
-                android:longClickable="true"
-
-                app:layout_constraintVertical_bias="0.1"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintHorizontal_bias="0.4"
-                tools:layout_constraintRight_creator="1" tools:layout_constraintLeft_creator="1"/>
+                android:layout_height="398dp"/>
 
         <Button
                 android:id="@+id/addButton"
